--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
-        "@tinymce/tinymce-vue": "^4.0.2"
+        "@tinymce/tinymce-vue": "^4.0.2",
+        "filepond": "^4.27.1",
+        "filepond-plugin-file-validate-type": "^1.2.6",
+        "vue-filepond": "^7.0.0"
     }
 }
