--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea/
-/public/
+/public/css/
+/public/js/
+/public/storage/
 /storage/app/public/
