--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0ea0e1f5ae17d859054e",
+    "/css/app.css": "/css/app.css?id=8709b65a76a7486eaada"
 }
