--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=1a826356c336036e5ef7",
-    "/css/app.css": "/css/app.css?id=8709b65a76a7486eaada"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
