--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=90b8e8b3032c5fcc317b",
+    "/css/app.css": "/css/app.css?id=7507b143a24c3dd4ad59"
 }
