--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/storage
 /storage/*.key
 /vendor
+/storage
 .env
 .env.backup
 .phpunit.result.cache
@@ -14,5 +15,3 @@ yarn-error.log
 /.idea/
 /public/css/
 /public/js/
-/public/storage/
-/storage/app/public/
