--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=cee05f1d95fd32f51a85",
-    "/css/app.css": "/css/app.css?id=2bc22eedb3db1933396a"
+    "/js/app.js": "/js/app.js?id=8c887aacf757b25682c0",
+    "/js/manifest.js": "/js/manifest.js?id=1514baaea419f38abb7d",
+    "/css/app.css": "/css/app.css?id=2ad1eaa4905d06da8a84",
+    "/js/vendor.js": "/js/vendor.js?id=d428e09577864f341391"
 }
