--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=1572b9ec9ca1007d99b5",
-    "/css/app.css": "/css/app.css?id=3909a72842d8da285d09"
+    "/js/app.js": "/js/app.js?id=bd4ee1a9e47d88c30a80",
+    "/js/manifest.js": "/js/manifest.js?id=1514baaea419f38abb7d",
+    "/css/app.css": "/css/app.css?id=2ad1eaa4905d06da8a84",
+    "/js/vendor.js": "/js/vendor.js?id=d428e09577864f341391"
 }
